--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,6 @@ Werkzeug==0.12.2
 imageio==1.4
 Matplotlib==2.0.1
 pybase64==1.0.1
+python-time==0.3.0
+threaded==4.1.0
+pycopy-binascii==2.4.0.post5
